# eigen-tensor-custom-reducers

./: .gitignore  CMakeLists.txt  README.md
libs/eigen/: CMakeLists.txt.in  install.txt
src/: reducer_example.cpp
